--- a/index.html
+++ b/index.html
@@ -11,6 +11,24 @@
     <title>Devin's Profile</title>
   </head>
   <body>
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">
+            <img src="img/ProfilePhoto.jpg" width="60" height="60" class="d-inline-block align-top" alt="">
+        </a>
+
+        <a class="navbar-brand" href="#">Devin Azzie</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-item nav-link" href="#">Github Profile</a>
+            <a class="nav-item nav-link" href="#">LinkedIn Profile</a>
+          </div>
+        </div>
+      </nav>
+
     <h1>Welcome to the Github page of Devin Azzie</h1>
     <h2> Please enjoy your stay</h2>
 
