--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
   </head>
   <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">
-            <img src="img/ProfilePhoto.jpg" width="60" height="60" class="d-inline-block align-top" alt="">
+            <img src="img/ProfilePhoto.jpg" width="100" height="100" class="d-inline-block align-top" alt="">
         </a>
 
-        <a class="navbar-brand" href="#">Devin Azzie</a>
+        <a class="navbar-brand" href="#">Devin Azzie's Profile</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link" href="#">Github Profile</a>
-            <a class="nav-item nav-link" href="#">LinkedIn Profile</a>
+            <a class="nav-item nav-link" href="https://github.com/DevOps901">Github Profile</a>
+            <a class="nav-item nav-link" href="https://www.linkedin.com/in/devin-azzie-7330b6167">LinkedIn Profile</a>
           </div>
         </div>
       </nav>
