--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <img src="img/ProfilePhoto.jpg" width="60" height="60" class="d-inline-block align-top" alt="">
         </a>
 
-        <a class="navbar-brand" href="#">Devin Azzie's Profile</a>
+        <a class="navbar-brand" href="#">Devin Azzie</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
