Added background image

--- a/index.html
+++ b/index.html
@@ -9,10 +9,24 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <title>Devin's Profile</title>
+    <style>
+      header.masthead{
+          text-align:center;
+          color: white;
+          background-image: url('img/BlueDeck.jpg');
+          background-repeat: no-repeat;
+          background-attachment: scroll;
+          background-position: center center;
+          background-size: cover;
+          width: 100vw;
+          height: 100vh;
+      }
+  </style>
+    
   </head>
   <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">
             <img src="img/ProfilePhoto.jpg" width="60" height="60" class="d-inline-block align-top" alt="">
         </a>
@@ -28,6 +42,14 @@
           </div>
         </div>
       </nav>
+
+      <header class="masthead">
+        <div class="container">
+          <div class="intro-text"></div>
+        </div>
+      </header>
+
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
