--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       header.masthead{
           text-align:center;
           color: white;
-          background-image: url('img/BlueDeck.jpg');
+          background-image: url('img/Space2.jpg');
           background-repeat: no-repeat;
           background-attachment: scroll;
           background-position: center center;
@@ -26,6 +26,23 @@
   </head>
   <body>
 
+    <nav class="navbar navbar-expand-lg navbar-dark navbar bg-transparent fixed-top" id="mainNav">
+      <div class="container">
+          <a class="navbar-brand js-scroll-trigger" href="devops901.github.io">Devin Azzie</a>
+          <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle Navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarResponsive">
+              <ul class="navbar-nav text-uppercase ml-auto" >
+                 
+                  <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://github.com/DevOps901">Github Profile</a></li>
+                  <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://www.linkedin.com/in/devin-azzie-7330b6167">LinkedIn Profile</a></li>
+
+              </ul>
+          </div>
+      </div>
+  </nav>
+<!--
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">
             <img src="img/ProfilePhoto.jpg" width="60" height="60" class="d-inline-block align-top" alt="">
@@ -42,12 +59,15 @@
           </div>
         </div>
       </nav>
+      -->
 
       <header class="masthead">
         <div class="container">
           <div class="intro-text"></div>
         </div>
       </header>
+
+
 
 
 
