--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <div class="container">
 
       <!-- About Section Heading -->
-      <h2 class="page-section-heading text-center text-uppercase text-white">About</h2>
+      <h2 class="page-section-heading text-center text-uppercase text-white">About Me</h2>
 
       <!-- Icon Divider -->
       <div class="divider-custom divider-light">
@@ -230,7 +230,7 @@
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/Dash.png" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                <p class="mb-5">Dimension Data Dash is an enablement tool created by the NTT Secure Coders which aims to provide a high-level overview of security controls and highlights what each control is, why it is important, and what risks there are when the control is not implemented. Each control has it’s own dashboard and the tool is designed to have a very simple user interface. </p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
@@ -269,7 +269,7 @@
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/Glance.png" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                <p class="mb-5">Dimension Data Glance is one of the winning products from Hackfest 2019.1 and is an application which will simplify the process of logging calls to Dimension Data’s ITSM system making it easier for end-users to report malfunctioning equipment. It uses QR scanning technology to pull information on the room in which there is a problem and then through simple swiping gestures the user can log the issue for specific items in that room. The app will also function as an enablement tool to help A/V engineers perform their daily checks faster and log the calls at the same time.</p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
