Changes colour code for primary

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#projects">Projects</a>
+            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">Projects</a>
           </li>
           <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">About</a>
+            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">About Me</a>
           </li>
         </ul>
       </div>
@@ -63,7 +63,7 @@
     <div class="container d-flex align-items-center flex-column">
       
       <!-- Masthead Avatar Image -->
-      <img class="masthead-avatar mb-5" src="img/RoundProfilePicture.png" alt="">
+      <img class="masthead-avatar mb-3" src="img/RoundProfilePicture.png" alt="">
 
       <!-- Masthead Heading -->
       <h1 class="masthead-heading text-light text-uppercase mb-0">Devin Azzie</h1>
