Fixed spelling error

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           <p class="lead">I am a mechanical engineering graduate who has been part of the NTT secure coding learnership program since 1 June 2019.</p>
         </div>
         <div class="col-lg-4 mr-auto">
-          <p class="lead">I have a passion for technology and simple, elegant solutions. I enjoy being challenged and mentally stimulated through my interaction with people who have vast skills in the areas tat I am interested in.</p>
+          <p class="lead">I have a passion for technology and simple, elegant solutions. I enjoy being challenged and mentally stimulated through my interaction with people who have vast skills in the areas that I am interested in.</p>
         </div>
       </div>
 
