--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         background-position: center center;
         background-size: cover;
         width: 100vw;
-        height: 108vh;
+        height: 105vh;
     }
 
 </style>
@@ -52,6 +52,9 @@
           <li class="nav-item mx-0 mx-lg-1">
             <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">About Me</a>
           </li>
+          <li class="nav-item mx-0 mx-lg-1">
+            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#education">Education</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -63,7 +66,7 @@
     <div class="container d-flex align-items-center flex-column">
       
       <!-- Masthead Avatar Image -->
-      <img class="masthead-avatar mb-3" src="img/RoundProfilePicture.png" alt="">
+      <img class="masthead-avatar mb-3" src="img/RoundProfilePictureBorder.png" alt="">
 
       <!-- Masthead Heading -->
       <h1 class="masthead-heading text-light text-uppercase mb-0">Devin Azzie</h1>
@@ -159,6 +162,54 @@
 
     </div>
   </section>
+
+
+<!-- Education Section -->
+<section class="page-section portfolio" id="education">
+  <div class="container">
+
+    <!-- Education Section Heading -->
+    <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Education</h2>
+
+    <!-- Icon Divider -->
+    <div class="divider-custom">
+      <div class="divider-custom-line"></div>
+      <div class="divider-custom-icon">
+        <i class="fas fa-star"></i>
+      </div>
+      <div class="divider-custom-line"></div>
+    </div>
+
+    <!-- Education Grid Items -->
+    <div class="row">
+
+      <!-- Education Item 1 -->
+      <div class="col-md-6 col-lg-4">
+        <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#educationModal1">
+          <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+            <div class="portfolio-item-caption-content text-center text-white">
+              <i class="fas fa-plus fa-3x"></i>
+            </div>
+          </div>
+          <img class="img-fluid" src="img/portfolio/School.png" alt="">
+        </div>
+      </div>
+
+      <!-- Education Item 2 -->
+      <div class="col-md-6 col-lg-4">
+        <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#educationModal2">
+          <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+            <div class="portfolio-item-caption-content text-center text-white">
+              <i class="fas fa-plus fa-3x"></i>
+            </div>
+          </div>
+          <img class="img-fluid" src="img/portfolio/University.png" alt="">
+        </div>
+      </div>
+
+    </div>
+  </div>>
+</section>
 
   <!-- Footer -->
   <footer class="footer text-center">
@@ -282,6 +333,85 @@
     </div>
   </div>
 
+  <!-- Education Modals -->
+
+  <!-- Education Modal 1 -->
+  <div class="portfolio-modal modal fade" id="educationModal1" tabindex="-1" role="dialog" aria-labelledby="eduationModal1Label" aria-hidden="true">
+    <div class="modal-dialog modal-xl" role="document">
+      <div class="modal-content">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">
+            <i class="fas fa-times"></i>
+          </span>
+        </button>
+        <div class="modal-body text-center">
+          <div class="container">
+            <div class="row justify-content-center">
+              <div class="col-lg-8">
+                <!-- Education Modal - Title -->
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">De La Salle Holy Cross College</h2>
+                <!-- Icon Divider -->
+                <div class="divider-custom">
+                  <div class="divider-custom-line"></div>
+                  <div class="divider-custom-icon">
+                    <i class="fas fa-star"></i>
+                  </div>
+                  <div class="divider-custom-line"></div>
+                </div>
+                <!-- Education Modal - Image -->
+                <img class="img-fluid rounded mb-5" src="img/portfolio/School.png" alt="">
+                <!-- Education Modal - Text -->
+                <p class="mb-5">Dimension Data Dash is an enablement tool created by the NTT Secure Coders which aims to provide a high-level overview of security controls and highlights what each control is, why it is important, and what risks there are when the control is not implemented. Each control has it’s own dashboard and the tool is designed to have a very simple user interface. </p>
+                <button class="btn btn-primary" href="#" data-dismiss="modal">
+                  <i class="fas fa-times fa-fw"></i>
+                  Close Window
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Education Modal 2 -->
+  <div class="portfolio-modal modal fade" id="educationModal2" tabindex="-1" role="dialog" aria-labelledby="eduationModal2Label" aria-hidden="true">
+    <div class="modal-dialog modal-xl" role="document">
+      <div class="modal-content">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">
+            <i class="fas fa-times"></i>
+          </span>
+        </button>
+        <div class="modal-body text-center">
+          <div class="container">
+            <div class="row justify-content-center">
+              <div class="col-lg-8">
+                <!-- Education Modal - Title -->
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">University of the Witwatersrand</h2>
+                <!-- Icon Divider -->
+                <div class="divider-custom">
+                  <div class="divider-custom-line"></div>
+                  <div class="divider-custom-icon">
+                    <i class="fas fa-star"></i>
+                  </div>
+                  <div class="divider-custom-line"></div>
+                </div>
+                <!-- Education Modal - Image -->
+                <img class="img-fluid rounded mb-5" src="img/portfolio/University.png" alt="">
+                <!-- Education Modal - Text -->
+                <p class="mb-5">Dimension Data Dash is an enablement tool created by the NTT Secure Coders which aims to provide a high-level overview of security controls and highlights what each control is, why it is important, and what risks there are when the control is not implemented. Each control has it’s own dashboard and the tool is designed to have a very simple user interface. </p>
+                <button class="btn btn-primary" href="#" data-dismiss="modal">
+                  <i class="fas fa-times fa-fw"></i>
+                  Close Window
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
  
 
   <!-- Bootstrap core JavaScript -->
