--- a/index.html
+++ b/index.html
@@ -362,9 +362,11 @@
                 <img class="img-fluid rounded mb-5" src="img/portfolio/School.png" alt="">
                 <!-- Education Modal - Text -->
                 <p class="mb-5">Dimension Data Dash is an enablement tool created by the NTT Secure Coders which aims to provide a high-level overview of security controls and highlights what each control is, why it is important, and what risks there are when the control is not implemented. Each control has it’s own dashboard and the tool is designed to have a very simple user interface. </p>
-                <button class="btn btn-primary" href="documents/MatricCertificates.pdf" >
+                <a href="https://github.com/DevOps901/DevOps901.github.io/raw/master/documents/MatricCertificate.pdf" download="DevinAzzie_MatricCertificate.pdf">
+                  <button class="btn btn-primary">
                   Matric Certificate
-                </button>
+                  </button>
+                </a>
               </div>
             </div>
           </div>
@@ -400,10 +402,16 @@
                 <img class="img-fluid rounded mb-5" src="img/portfolio/University.png" alt="">
                 <!-- Education Modal - Text -->
                 <p class="mb-5">Dimension Data Dash is an enablement tool created by the NTT Secure Coders which aims to provide a high-level overview of security controls and highlights what each control is, why it is important, and what risks there are when the control is not implemented. Each control has it’s own dashboard and the tool is designed to have a very simple user interface. </p>
-                <button class="btn btn-primary" href="#" data-dismiss="modal">
-                  <i class="fas fa-times fa-fw"></i>
-                  Close Window
-                </button>
+                <a href="https://github.com/DevOps901/DevOps901.github.io/raw/master/documents/Degree.pdf" download="DevinAzzie_Degree.pdf">
+                  <button class="btn btn-primary">
+                  Degree
+                  </button>
+                </a>
+                <a href="https://github.com/DevOps901/DevOps901.github.io/raw/master/documents/UniversityTranscripts.pdf" download="DevinAzzie_MatricCertificate.pdf">
+                  <button class="btn btn-primary">
+                  Transcript
+                  </button>
+                </a>
               </div>
             </div>
           </div>
