updated education section

--- a/index.html
+++ b/index.html
@@ -350,10 +350,11 @@
                   </div>
                   <div class="divider-custom-line"></div>
                 </div>
+                <h5 class="mb-5">2009-2013</h5>
                 <!-- Education Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/School.png" alt="">
                 <!-- Education Modal - Text -->
-                <p class="mb-5">Dimension Data Dash is an enablement tool created by the NTT Secure Coders which aims to provide a high-level overview of security controls and highlights what each control is, why it is important, and what risks there are when the control is not implemented. Each control has it’s own dashboard and the tool is designed to have a very simple user interface. </p>
+                <p class="mb-5">I attended De La Salle Holy Cross College high school in victory park from 2009 up until 2013 when I wrote matric. Subjects I took included: Mathematics, English, Afrikaans first additional language, Life Orientation, Life Sciences, Physical Sciences, Accounting, Mathematics Paper 3, and Advanced Program Mathematics. I achieved seven A’s and two B’s for Matric.</p>
                 <a href="https://github.com/DevOps901/DevOps901.github.io/raw/master/documents/DevinAzzie_MatricCertificate.pdf" download="DevinAzzie_MatricCertificate">
                   <button class="btn btn-primary">
                   Matric Certificate
@@ -390,10 +391,11 @@
                   </div>
                   <div class="divider-custom-line"></div>
                 </div>
+                <h5 class="mb-5">2014-2018</h5>
                 <!-- Education Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/University.png" alt="">
                 <!-- Education Modal - Text -->
-                <p class="mb-5">Dimension Data Dash is an enablement tool created by the NTT Secure Coders which aims to provide a high-level overview of security controls and highlights what each control is, why it is important, and what risks there are when the control is not implemented. Each control has it’s own dashboard and the tool is designed to have a very simple user interface. </p>
+                <p class="mb-5">I graduated from the University of Witwatersrand in 2018 with a Bachelor of Science in Mechanical Engineering. Some notable achievements during my studies were that I was awarded a certificate of Merit in 2014 for achieving over 80% in my Physics course, as well as making Dean’s List for 2014 and 2015. I was also the top student in the 2016 Engineering Ethics course.</p>
                 <a href="https://github.com/DevOps901/DevOps901.github.io/raw/master/documents/DevinAzzie_Degree.pdf" download="DevinAzzie_Degree">
                   <button class="btn btn-primary">
                   Degree
