Uploaded more Certs and added more education modals

--- a/index.html
+++ b/index.html
@@ -207,6 +207,42 @@
         </div>
       </div>
 
+      <!-- Education Item 3 -->
+      <div class="col-md-6 col-lg-4">
+        <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#educationModal3">
+          <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+            <div class="portfolio-item-caption-content text-center text-white">
+              <i class="fas fa-plus fa-3x"></i>
+            </div>
+          </div>
+          <img class="img-fluid" src="img/portfolio/Cisco.png" alt="">
+        </div>
+      </div>
+
+      <!-- Education Item 4 -->
+      <div class="col-md-6 col-lg-4">
+        <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#educationModal4">
+          <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+            <div class="portfolio-item-caption-content text-center text-white">
+              <i class="fas fa-plus fa-3x"></i>
+            </div>
+          </div>
+          <img class="img-fluid" src="img/portfolio/Fortinet.png" alt="">
+        </div>
+      </div>
+
+      <!-- Education Item 5 -->
+      <div class="col-md-6 col-lg-4">
+        <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#educationModal5">
+          <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+            <div class="portfolio-item-caption-content text-center text-white">
+              <i class="fas fa-plus fa-3x"></i>
+            </div>
+          </div>
+          <img class="img-fluid" src="img/portfolio/AWS.png" alt="">
+        </div>
+      </div>
+
     </div>
   </div>
 </section>
@@ -413,7 +449,146 @@
       </div>
     </div>
   </div>
- 
+
+  <!-- Education Modal 3 -->
+  <div class="portfolio-modal modal fade" id="educationModal3" tabindex="-1" role="dialog" aria-labelledby="eduationModal3Label" aria-hidden="true">
+    <div class="modal-dialog modal-xl" role="document">
+      <div class="modal-content">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">
+            <i class="fas fa-times"></i>
+          </span>
+        </button>
+        <div class="modal-body text-center">
+          <div class="container">
+            <div class="row justify-content-center">
+              <div class="col-lg-8">
+                <!-- Education Modal - Title -->
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Cisco Firejumper Academy - Network Security Cybersecurity Systems Engineer </h2>
+                <!-- Icon Divider -->
+                <div class="divider-custom">
+                  <div class="divider-custom-line"></div>
+                  <div class="divider-custom-icon">
+                    <i class="fas fa-star"></i>
+                  </div>
+                  <div class="divider-custom-line"></div>
+                </div>
+                <!-- Education Modal - Image -->
+                <img class="img-fluid rounded mb-5" src="img/portfolio/Cisco.png" alt="">
+                <!-- Education Modal - Text -->
+                <p class="mb-5">I graduated from the University of Witwatersrand in 2018 with a Bachelor of Science in Mechanical Engineering. Some notable achievements during my studies were that I was awarded a certificate of Merit in 2014 for achieving over 80% in my Physics course, as well as making Dean’s List for 2014 and 2015. I was also the top student in the 2016 Engineering Ethics course.</p>
+                <a href="https://github.com/DevOps901/DevOps901.github.io/raw/master/documents/DevinAzzie_Degree.pdf" download="DevinAzzie_Degree">
+                  <button class="btn btn-primary">
+                  Stage 1
+                  </button>
+                </a>
+                <a href="https://github.com/DevOps901/DevOps901.github.io/raw/master/documents/DevinAzzie_Degree.pdf" download="DevinAzzie_Degree">
+                  <button class="btn btn-primary">
+                  Stage 2
+                  </button>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Education Modal 4 -->
+  <div class="portfolio-modal modal fade" id="educationModal4" tabindex="-1" role="dialog" aria-labelledby="eduationModal4Label" aria-hidden="true">
+    <div class="modal-dialog modal-xl" role="document">
+      <div class="modal-content">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">
+            <i class="fas fa-times"></i>
+          </span>
+        </button>
+        <div class="modal-body text-center">
+          <div class="container">
+            <div class="row justify-content-center">
+              <div class="col-lg-8">
+                <!-- Education Modal - Title -->
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Fortinet NSE Associate </h2>
+                <!-- Icon Divider -->
+                <div class="divider-custom">
+                  <div class="divider-custom-line"></div>
+                  <div class="divider-custom-icon">
+                    <i class="fas fa-star"></i>
+                  </div>
+                  <div class="divider-custom-line"></div>
+                </div>
+                <!-- Education Modal - Image -->
+                <img class="img-fluid rounded mb-5" src="img/portfolio/Fortinet.png" alt="">
+                <!-- Education Modal - Text -->
+                <p class="mb-5">I graduated from the University of Witwatersrand in 2018 with a Bachelor of Science in Mechanical Engineering. Some notable achievements during my studies were that I was awarded a certificate of Merit in 2014 for achieving over 80% in my Physics course, as well as making Dean’s List for 2014 and 2015. I was also the top student in the 2016 Engineering Ethics course.</p>
+                <a href="https://github.com/DevOps901/DevOps901.github.io/raw/master/documents/DevinAzzie_Degree.pdf" download="DevinAzzie_Degree">
+                  <button class="btn btn-primary">
+                  NSE1
+                  </button>
+                </a>
+                <a href="https://github.com/DevOps901/DevOps901.github.io/raw/master/documents/DevinAzzie_Degree.pdf" download="DevinAzzie_Degree">
+                  <button class="btn btn-primary">
+                  NSE2
+                  </button>
+                </a>
+                <a href="https://github.com/DevOps901/DevOps901.github.io/raw/master/documents/DevinAzzie_Degree.pdf" download="DevinAzzie_Degree">
+                  <button class="btn btn-primary">
+                  NSE3
+                  </button>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Education Modal 5 -->
+  <div class="portfolio-modal modal fade" id="educationModal5" tabindex="-1" role="dialog" aria-labelledby="eduationModal5Label" aria-hidden="true">
+    <div class="modal-dialog modal-xl" role="document">
+      <div class="modal-content">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">
+            <i class="fas fa-times"></i>
+          </span>
+        </button>
+        <div class="modal-body text-center">
+          <div class="container">
+            <div class="row justify-content-center">
+              <div class="col-lg-8">
+                <!-- Education Modal - Title -->
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Amazon Web Services</h2>
+                <!-- Icon Divider -->
+                <div class="divider-custom">
+                  <div class="divider-custom-line"></div>
+                  <div class="divider-custom-icon">
+                    <i class="fas fa-star"></i>
+                  </div>
+                  <div class="divider-custom-line"></div>
+                </div>
+                <!-- Education Modal - Image -->
+                <img class="img-fluid rounded mb-5" src="img/portfolio/AWS.png" alt="">
+                <!-- Education Modal - Text -->
+                <p class="mb-5">I graduated from the University of Witwatersrand in 2018 with a Bachelor of Science in Mechanical Engineering. Some notable achievements during my studies were that I was awarded a certificate of Merit in 2014 for achieving over 80% in my Physics course, as well as making Dean’s List for 2014 and 2015. I was also the top student in the 2016 Engineering Ethics course.</p>
+                <a href="https://github.com/DevOps901/DevOps901.github.io/raw/master/documents/DevinAzzie_Degree.pdf" download="DevinAzzie_Degree">
+                  <button class="btn btn-primary">
+                  Cloud Practioner
+                  </button>
+                </a>
+                <a href="https://github.com/DevOps901/DevOps901.github.io/raw/master/documents/DevinAzzie_Degree.pdf" download="DevinAzzie_Degree">
+                  <button class="btn btn-primary">
+                  Security Fundamentals
+                  </button>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
