--- a/index.html
+++ b/index.html
@@ -477,12 +477,12 @@
                 <img class="img-fluid rounded mb-5" src="img/portfolio/Cisco.png" alt="">
                 <!-- Education Modal - Text -->
                 <p class="mb-5">I graduated from the University of Witwatersrand in 2018 with a Bachelor of Science in Mechanical Engineering. Some notable achievements during my studies were that I was awarded a certificate of Merit in 2014 for achieving over 80% in my Physics course, as well as making Dean’s List for 2014 and 2015. I was also the top student in the 2016 Engineering Ethics course.</p>
-                <a href="https://github.com/DevOps901/DevOps901.github.io/raw/master/documents/DevinAzzie_Degree.pdf" download="DevinAzzie_Degree">
+                <a href="https://github.com/DevOps901/DevOps901.github.io/raw/master/documents/DevinAzzie_CiscoStage1.pdf" download="DevinAzzie_CiscoStage1">
                   <button class="btn btn-primary">
                   Stage 1
                   </button>
                 </a>
-                <a href="https://github.com/DevOps901/DevOps901.github.io/raw/master/documents/DevinAzzie_Degree.pdf" download="DevinAzzie_Degree">
+                <a href="https://github.com/DevOps901/DevOps901.github.io/raw/master/documents/DevinAzzie_CiscoStage2.pdf" download="DevinAzzie_CiscoStage2">
                   <button class="btn btn-primary">
                   Stage 2
                   </button>
@@ -522,17 +522,17 @@
                 <img class="img-fluid rounded mb-5" src="img/portfolio/Fortinet.png" alt="">
                 <!-- Education Modal - Text -->
                 <p class="mb-5">I graduated from the University of Witwatersrand in 2018 with a Bachelor of Science in Mechanical Engineering. Some notable achievements during my studies were that I was awarded a certificate of Merit in 2014 for achieving over 80% in my Physics course, as well as making Dean’s List for 2014 and 2015. I was also the top student in the 2016 Engineering Ethics course.</p>
-                <a href="https://github.com/DevOps901/DevOps901.github.io/raw/master/documents/DevinAzzie_Degree.pdf" download="DevinAzzie_Degree">
+                <a href="https://github.com/DevOps901/DevOps901.github.io/raw/master/documents/DevinAzzie_FortinetNSE1.pdf" download="DevinAzzie_FortinetNSE1">
                   <button class="btn btn-primary">
                   NSE1
                   </button>
                 </a>
-                <a href="https://github.com/DevOps901/DevOps901.github.io/raw/master/documents/DevinAzzie_Degree.pdf" download="DevinAzzie_Degree">
+                <a href="https://github.com/DevOps901/DevOps901.github.io/raw/master/documents/DevinAzzie_FortinetNSE2.pdf" download="DevinAzzie_FortinetNSE2">
                   <button class="btn btn-primary">
                   NSE2
                   </button>
                 </a>
-                <a href="https://github.com/DevOps901/DevOps901.github.io/raw/master/documents/DevinAzzie_Degree.pdf" download="DevinAzzie_Degree">
+                <a href="https://github.com/DevOps901/DevOps901.github.io/raw/master/documents/DevinAzzie_FortinetNSE3.pdf" download="DevinAzzie_FortinetNSE3">
                   <button class="btn btn-primary">
                   NSE3
                   </button>
@@ -572,12 +572,12 @@
                 <img class="img-fluid rounded mb-5" src="img/portfolio/AWS.png" alt="">
                 <!-- Education Modal - Text -->
                 <p class="mb-5">I graduated from the University of Witwatersrand in 2018 with a Bachelor of Science in Mechanical Engineering. Some notable achievements during my studies were that I was awarded a certificate of Merit in 2014 for achieving over 80% in my Physics course, as well as making Dean’s List for 2014 and 2015. I was also the top student in the 2016 Engineering Ethics course.</p>
-                <a href="https://github.com/DevOps901/DevOps901.github.io/raw/master/documents/DevinAzzie_Degree.pdf" download="DevinAzzie_Degree">
+                <a href="https://github.com/DevOps901/DevOps901.github.io/raw/master/documents/DevinAzzie_AWSCloudPractioner.pdf" download="DevinAzzie_AWSCloudPractioner">
                   <button class="btn btn-primary">
                   Cloud Practioner
                   </button>
                 </a>
-                <a href="https://github.com/DevOps901/DevOps901.github.io/raw/master/documents/DevinAzzie_Degree.pdf" download="DevinAzzie_Degree">
+                <a href="https://github.com/DevOps901/DevOps901.github.io/raw/master/documents/DevinAzzie_AWSSecurityFundamentals.pdf" download="DevinAzzie_AWSSecurityFundamentals">
                   <button class="btn btn-primary">
                   Security Fundamentals
                   </button>
