--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                 <!-- Education Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/School.png" alt="">
                 <!-- Education Modal - Text -->
-                <p class="mb-5">I attended De La Salle Holy Cross College high school in victory park from 2009 up until 2013 when I wrote matric. Subjects I took included: Mathematics, English, Afrikaans first additional language, Life Orientation, Life Sciences, Physical Sciences, Accounting, Mathematics Paper 3, and Advanced Program Mathematics. I achieved seven A’s and two B’s for Matric.</p>
+                <p class="mb-5">I attended De La Salle Holy Cross College high school in Victory Park from 2009 until 2013 and then wrote matric in 2013. Subjects I took included: Mathematics, English, Afrikaans first additional language, Life Orientation, Life Sciences, Physical Sciences, Accounting, Mathematics Paper 3, and Advanced Program Mathematics. I achieved seven A’s and two B’s for Matric.</p>
                 <a href="https://github.com/DevOps901/DevOps901.github.io/raw/master/documents/DevinAzzie_MatricCertificate.pdf" download="DevinAzzie_MatricCertificate">
                   <button class="btn btn-primary">
                   Matric Certificate
@@ -464,7 +464,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Education Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Cisco Firejumper Academy - Network Security Cybersecurity Systems Engineer </h2>
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Cisco Firejumper Academy</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -476,7 +476,7 @@
                 <!-- Education Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/Cisco.png" alt="">
                 <!-- Education Modal - Text -->
-                <p class="mb-5">I graduated from the University of Witwatersrand in 2018 with a Bachelor of Science in Mechanical Engineering. Some notable achievements during my studies were that I was awarded a certificate of Merit in 2014 for achieving over 80% in my Physics course, as well as making Dean’s List for 2014 and 2015. I was also the top student in the 2016 Engineering Ethics course.</p>
+                <p class="mb-5">I have completed the Cisco Firejumper Academy Network Security Cybersecurity Systems Engineer Stage 1 and Stage 2 certifications. Stage 1 comprises of an essentials course and Stage 2 has four sections: Advanced Threat Cybersecurity, Cloud Web and Email Cybersecurity, Enforcement and Visibility, and Network Security.</p>
                 <a href="https://github.com/DevOps901/DevOps901.github.io/raw/master/documents/DevinAzzie_CiscoStage1.pdf" download="DevinAzzie_CiscoStage1">
                   <button class="btn btn-primary">
                   Stage 1
@@ -521,7 +521,7 @@
                 <!-- Education Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/Fortinet.png" alt="">
                 <!-- Education Modal - Text -->
-                <p class="mb-5">I graduated from the University of Witwatersrand in 2018 with a Bachelor of Science in Mechanical Engineering. Some notable achievements during my studies were that I was awarded a certificate of Merit in 2014 for achieving over 80% in my Physics course, as well as making Dean’s List for 2014 and 2015. I was also the top student in the 2016 Engineering Ethics course.</p>
+                <p class="mb-5">I have been certified as a Fortinet NSE Associate by completing Fortinet NSE1, NSE2, and NSE3 certifications. NSE3 requires you to certify across at least 4 Fortinet products however I have completed all 22 products. My Fortinet NSE Associate certification is valid for two years from the date of NSE3 certification.</p>
                 <a href="https://github.com/DevOps901/DevOps901.github.io/raw/master/documents/DevinAzzie_FortinetNSE1.pdf" download="DevinAzzie_FortinetNSE1">
                   <button class="btn btn-primary">
                   NSE1
@@ -571,7 +571,7 @@
                 <!-- Education Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/AWS.png" alt="">
                 <!-- Education Modal - Text -->
-                <p class="mb-5">I graduated from the University of Witwatersrand in 2018 with a Bachelor of Science in Mechanical Engineering. Some notable achievements during my studies were that I was awarded a certificate of Merit in 2014 for achieving over 80% in my Physics course, as well as making Dean’s List for 2014 and 2015. I was also the top student in the 2016 Engineering Ethics course.</p>
+                <p class="mb-5">I have completed the AWS Cloud Practitioner and Security Fundamentals courses.</p>
                 <a href="https://github.com/DevOps901/DevOps901.github.io/raw/master/documents/DevinAzzie_AWSCloudPractioner.pdf" download="DevinAzzie_AWSCloudPractioner">
                   <button class="btn btn-primary">
                   Cloud Practioner
