--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     header.masthead{
         text-align:center;
         color: white;
-        background-image: url('img/BlueDeck.jpg');
+        background-image: url('img/BlueDeck2.jpg');
         background-repeat: no-repeat;
         background-attachment: scroll;
         background-position: center center;
