fixed download links to work faster

--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                   </div>
                   <div class="divider-custom-line"></div>
                 </div>
-                <h5 class="mb-5">2009-2013</h5>
+                <h5 class="mb-5">2009 - 2013</h5>
                 <!-- Education Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/School.png" alt="">
                 <!-- Education Modal - Text -->
@@ -427,17 +427,17 @@
                   </div>
                   <div class="divider-custom-line"></div>
                 </div>
-                <h5 class="mb-5">2014-2018</h5>
+                <h5 class="mb-5">2014 - 2018</h5>
                 <!-- Education Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/University.png" alt="">
                 <!-- Education Modal - Text -->
                 <p class="mb-5">I graduated from the University of Witwatersrand in 2018 with a Bachelor of Science in Mechanical Engineering. Some notable achievements during my studies were that I was awarded a certificate of Merit in 2014 for achieving over 80% in my Physics course, as well as making Dean’s List for 2014 and 2015. I was also the top student in the 2016 Engineering Ethics course.</p>
-                <a href="https://github.com/DevOps901/DevOps901.github.io/raw/master/documents/DevinAzzie_Degree.pdf" download="DevinAzzie_Degree">
+                <a href="documents/DevinAzzie_Degree.pdf" download="DevinAzzie_Degree">
                   <button class="btn btn-primary">
                   Degree
                   </button>
                 </a>
-                <a href="https://github.com/DevOps901/DevOps901.github.io/raw/master/documents/DevinAzzie_UniversityTranscripts.pdf" download="DevinAzzie_MatricCertificate">
+                <a href="documents/DevinAzzie_UniversityTranscripts.pdf" download="DevinAzzie_MatricCertificate">
                   <button class="btn btn-primary">
                   Transcript
                   </button>
@@ -477,12 +477,12 @@
                 <img class="img-fluid rounded mb-5" src="img/portfolio/Cisco.png" alt="">
                 <!-- Education Modal - Text -->
                 <p class="mb-5">I have completed the Cisco Firejumper Academy Network Security Cybersecurity Systems Engineer Stage 1 and Stage 2 certifications. Stage 1 comprises of an essentials course and Stage 2 has four sections: Advanced Threat Cybersecurity, Cloud Web and Email Cybersecurity, Enforcement and Visibility, and Network Security.</p>
-                <a href="https://github.com/DevOps901/DevOps901.github.io/raw/master/documents/DevinAzzie_CiscoStage1.pdf" download="DevinAzzie_CiscoStage1">
+                <a href="documents/DevinAzzie_CiscoStage1.pdf" download="DevinAzzie_CiscoStage1">
                   <button class="btn btn-primary">
                   Stage 1
                   </button>
                 </a>
-                <a href="https://github.com/DevOps901/DevOps901.github.io/raw/master/documents/DevinAzzie_CiscoStage2.pdf" download="DevinAzzie_CiscoStage2">
+                <a href="documents/DevinAzzie_CiscoStage2.pdf" download="DevinAzzie_CiscoStage2">
                   <button class="btn btn-primary">
                   Stage 2
                   </button>
@@ -522,17 +522,17 @@
                 <img class="img-fluid rounded mb-5" src="img/portfolio/Fortinet.png" alt="">
                 <!-- Education Modal - Text -->
                 <p class="mb-5">I have been certified as a Fortinet NSE Associate by completing Fortinet NSE1, NSE2, and NSE3 certifications. NSE3 requires you to certify across at least 4 Fortinet products however I have completed all 22 products. My Fortinet NSE Associate certification is valid for two years from the date of NSE3 certification.</p>
-                <a href="https://github.com/DevOps901/DevOps901.github.io/raw/master/documents/DevinAzzie_FortinetNSE1.pdf" download="DevinAzzie_FortinetNSE1">
+                <a href="documents/DevinAzzie_FortinetNSE1.pdf" download="DevinAzzie_FortinetNSE1">
                   <button class="btn btn-primary">
                   NSE1
                   </button>
                 </a>
-                <a href="https://github.com/DevOps901/DevOps901.github.io/raw/master/documents/DevinAzzie_FortinetNSE2.pdf" download="DevinAzzie_FortinetNSE2">
+                <a href="documents/DevinAzzie_FortinetNSE2.pdf" download="DevinAzzie_FortinetNSE2">
                   <button class="btn btn-primary">
                   NSE2
                   </button>
                 </a>
-                <a href="https://github.com/DevOps901/DevOps901.github.io/raw/master/documents/DevinAzzie_FortinetNSE3.pdf" download="DevinAzzie_FortinetNSE3">
+                <a href="documents/DevinAzzie_FortinetNSE3.pdf" download="DevinAzzie_FortinetNSE3">
                   <button class="btn btn-primary">
                   NSE3
                   </button>
@@ -572,12 +572,12 @@
                 <img class="img-fluid rounded mb-5" src="img/portfolio/AWS.png" alt="">
                 <!-- Education Modal - Text -->
                 <p class="mb-5">I have completed the AWS Cloud Practitioner and Security Fundamentals courses.</p>
-                <a href="https://github.com/DevOps901/DevOps901.github.io/raw/master/documents/DevinAzzie_AWSCloudPractioner.pdf" download="DevinAzzie_AWSCloudPractioner">
+                <a href="documents/DevinAzzie_AWSCloudPractioner.pdf" download="DevinAzzie_AWSCloudPractioner">
                   <button class="btn btn-primary">
                   Cloud Practioner
                   </button>
                 </a>
-                <a href="https://github.com/DevOps901/DevOps901.github.io/raw/master/documents/DevinAzzie_AWSSecurityFundamentals.pdf" download="DevinAzzie_AWSSecurityFundamentals">
+                <a href="documents/DevinAzzie_AWSSecurityFundamentals.pdf" download="DevinAzzie_AWSSecurityFundamentals">
                   <button class="btn btn-primary">
                   Security Fundamentals
                   </button>
