--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                 <img class="img-fluid rounded mb-5" src="img/portfolio/School.png" alt="">
                 <!-- Education Modal - Text -->
                 <p class="mb-5">I attended De La Salle Holy Cross College high school in Victory Park from 2009 until 2013 and then wrote matric in 2013. Subjects I took included: Mathematics, English, Afrikaans first additional language, Life Orientation, Life Sciences, Physical Sciences, Accounting, Mathematics Paper 3, and Advanced Program Mathematics. I achieved seven A’s and two B’s for Matric.</p>
-                <a href="https://github.com/DevOps901/DevOps901.github.io/raw/master/documents/DevinAzzie_MatricCertificate.pdf" download="DevinAzzie_MatricCertificate">
+                <a href="documents/DevinAzzie_MatricCertificate.pdf">
                   <button class="btn btn-primary">
                   Matric Certificate
                   </button>
@@ -437,7 +437,7 @@
                   Degree
                   </button>
                 </a>
-                <a href="documents/DevinAzzie_UniversityTranscripts.pdf" download="DevinAzzie_MatricCertificate">
+                <a href="documents/DevinAzzie_UniversityTranscripts.pdf">
                   <button class="btn btn-primary">
                   Transcript
                   </button>
@@ -477,12 +477,12 @@
                 <img class="img-fluid rounded mb-5" src="img/portfolio/Cisco.png" alt="">
                 <!-- Education Modal - Text -->
                 <p class="mb-5">I have completed the Cisco Firejumper Academy Network Security Cybersecurity Systems Engineer Stage 1 and Stage 2 certifications. Stage 1 comprises of an essentials course and Stage 2 has four sections: Advanced Threat Cybersecurity, Cloud Web and Email Cybersecurity, Enforcement and Visibility, and Network Security.</p>
-                <a href="documents/DevinAzzie_CiscoStage1.pdf" download="DevinAzzie_CiscoStage1">
+                <a href="documents/DevinAzzie_CiscoStage1.pdf">
                   <button class="btn btn-primary">
                   Stage 1
                   </button>
                 </a>
-                <a href="documents/DevinAzzie_CiscoStage2.pdf" download="DevinAzzie_CiscoStage2">
+                <a href="documents/DevinAzzie_CiscoStage2.pdf">
                   <button class="btn btn-primary">
                   Stage 2
                   </button>
@@ -522,17 +522,17 @@
                 <img class="img-fluid rounded mb-5" src="img/portfolio/Fortinet.png" alt="">
                 <!-- Education Modal - Text -->
                 <p class="mb-5">I have been certified as a Fortinet NSE Associate by completing Fortinet NSE1, NSE2, and NSE3 certifications. NSE3 requires you to certify across at least 4 Fortinet products however I have completed all 22 products. My Fortinet NSE Associate certification is valid for two years from the date of NSE3 certification.</p>
-                <a href="documents/DevinAzzie_FortinetNSE1.pdf" download="DevinAzzie_FortinetNSE1">
+                <a href="documents/DevinAzzie_FortinetNSE1.pdf">
                   <button class="btn btn-primary">
                   NSE1
                   </button>
                 </a>
-                <a href="documents/DevinAzzie_FortinetNSE2.pdf" download="DevinAzzie_FortinetNSE2">
+                <a href="documents/DevinAzzie_FortinetNSE2.pdf">
                   <button class="btn btn-primary">
                   NSE2
                   </button>
                 </a>
-                <a href="documents/DevinAzzie_FortinetNSE3.pdf" download="DevinAzzie_FortinetNSE3">
+                <a href="documents/DevinAzzie_FortinetNSE3.pdf">
                   <button class="btn btn-primary">
                   NSE3
                   </button>
@@ -572,12 +572,12 @@
                 <img class="img-fluid rounded mb-5" src="img/portfolio/AWS.png" alt="">
                 <!-- Education Modal - Text -->
                 <p class="mb-5">I have completed the AWS Cloud Practitioner and Security Fundamentals courses.</p>
-                <a href="documents/DevinAzzie_AWSCloudPractioner.pdf" download="DevinAzzie_AWSCloudPractioner">
+                <a href="documents/DevinAzzie_AWSCloudPractioner.pdf">
                   <button class="btn btn-primary">
                   Cloud Practioner
                   </button>
                 </a>
-                <a href="documents/DevinAzzie_AWSSecurityFundamentals.pdf" download="DevinAzzie_AWSSecurityFundamentals">
+                <a href="documents/DevinAzzie_AWSSecurityFundamentals.pdf">
                   <button class="btn btn-primary">
                   Security Fundamentals
                   </button>
