Fixed even more broken links

--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
                 <img class="img-fluid rounded mb-5" src="img/portfolio/University.png" alt="">
                 <!-- Education Modal - Text -->
                 <p class="mb-5">I graduated from the University of Witwatersrand in 2018 with a Bachelor of Science in Mechanical Engineering. Some notable achievements during my studies were that I was awarded a certificate of Merit in 2014 for achieving over 80% in my Physics course, as well as making Dean’s List for 2014 and 2015. I was also the top student in the 2016 Engineering Ethics course.</p>
-                <a href="documents/DevinAzzie_Degree.pdf" download="DevinAzzie_Degree">
+                <a href="documents/DevinAzzie_Degree.pdf">
                   <button class="btn btn-primary">
                   Degree
                   </button>
