Fixed Issue with header image when rotating sideways on mobile site

--- a/index.html
+++ b/index.html
@@ -13,18 +13,16 @@
     header.masthead{
         text-align:center;
         color: white;
-        background-image: url('img/BlueDeckSquare.jpg');
+        background-image: url('img/BlueDeck2.jpg');
         background-repeat: no-repeat;
         background-attachment: scroll;
         background-position: center center;
         background-size: cover;
-        width: 100vw;
-        height: 105vh;
     }
 
 </style>
 
-  <!-- Custom fonts for this theme -->
+<!-- Custom fonts for this theme -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
