Updated About section background image

--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
         background-size: cover;
     }
 
+    .page-section2{
+      text-align:center;
+        color: white;
+        background-image: url('img/NightSky.jpg');
+        background-repeat: no-repeat;
+        background-attachment: scroll;
+        background-position: center center;
+        background-size: cover;
+    }
+
 </style>
 
 <!-- Custom fonts for this theme -->
@@ -28,7 +38,7 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
   <!-- Theme CSS -->
-  <link href="css/freelancer.min.css" rel="stylesheet">
+  <link href="css/freelancer.css" rel="stylesheet">
 
 </head>
 
@@ -133,11 +143,11 @@
   </section>
 
   <!-- About Section -->
-  <section class="page-section bg-primary text-white mb-0" id="about">
+  <section class="page-section2 bg-primary text-white mb-0" id="about">
     <div class="container">
 
       <!-- About Section Heading -->
-      <h2 class="page-section-heading text-center text-uppercase text-white">About Me</h2>
+      <h2 class="page-section-heading2 text-center text-uppercase text-white">About Me</h2>
 
       <!-- Icon Divider -->
       <div class="divider-custom divider-light">
