Fixed broken cisco stage 2 link

--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
                   Stage 1
                   </button>
                 </a>
-                <a href="documents/DevinAzzie_CiscoStage2.pdf">
+                <a href="documents/DevinAzzie_CiscoStage2.zip">
                   <button class="btn btn-primary">
                   Stage 2
                   </button>
