Added a skills section to the site

--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@
         background-position: center center;
         background-size: cover;
     }
+    
+    .page-section3{
+      text-align:center;
+        color: white;
+        background-image: url('img/Water.jpg');
+        background-repeat: no-repeat;
+        background-attachment: scroll;
+        background-position: center center;
+        background-size: cover;
+    }
 
 </style>
 
@@ -62,6 +72,9 @@
           </li>
           <li class="nav-item mx-0 mx-lg-1">
             <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#education">Education</a>
+          </li>
+          <li class="nav-item mx-0 mx-lg-1">
+            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#skills">Skills</a>
           </li>
         </ul>
       </div>
@@ -143,11 +156,11 @@
   </section>
 
   <!-- About Section -->
-  <section class="page-section2 bg-primary text-white mb-0" id="about">
+  <section class="page-section2 bg-primary text-white" id="about">
     <div class="container">
 
       <!-- About Section Heading -->
-      <h2 class="page-section-heading2 text-center text-uppercase text-white">About Me</h2>
+      <h2 class="page-section-heading2 text-center text-uppercase text-white mb-0">About Me</h2>
 
       <!-- Icon Divider -->
       <div class="divider-custom divider-light">
@@ -253,6 +266,105 @@
 
     </div>
   </div>
+</section>
+
+<!-- Skills Section -->
+<section class="page-section3 bg-primary text-white mb-0" id="skills">
+  <div class="container">
+
+    <!-- Skills Section Heading -->
+    <h2 class="page-section3-heading text-center text-uppercase text-white text-Primary">Skills</h2>
+
+    <!-- Icon Divider -->
+    <div class="divider-custom divider-light">
+      <div class="divider-custom-line"></div>
+      <div class="divider-custom-icon">
+        <i class="fas fa-star"></i>
+      </div>
+      <div class="divider-custom-line"></div>
+    </div>
+
+    <!-- Skills Section Content -->
+    
+    <!--Accordion wrapper-->
+<div class="accordion md-accordion accordion-4" id="accordionEx2" role="tablist" aria-multiselectable="true">
+
+  <!-- Accordion card -->
+  <div class="card">
+
+    <!-- Card header -->
+    <div class="card-header z-depth-1 teal lighten-4" role="tab" id="heading10">
+      <a data-toggle="collapse" data-parent="#accordionEx2" href="#collapse10" aria-expanded="true"
+        aria-controls="collapse10">
+        <h4 class="mb-0 black-text text-center font-weight-bold text-uppercase">
+          Technical Skills
+        </h4>
+      </a>
+    </div>
+
+    <!-- Card body -->
+    <div id="collapse10" class="collapse show" role="tabpanel" aria-labelledby="heading10"
+      data-parent="#accordionEx2">
+      <div class="card-body rgba-teal-strong black-text text-primary text-left">
+        <p>Over several years I have developed my technical skills relating to both engineering as well as technology and computers. Some of my skills include:</p>
+
+        <ul>
+          <li>Python</li>
+          <li>Basic Javascript</li>
+          <li>HTML, CSS, and Bootstrap 4</li>
+          <li>MATLAB</li>
+          <li>Simulink</li>
+          <li>Have entry-level certifications in Cisco, Fortinet, McAfee, and Palo Alto Networks cybersecurity products</li>
+          <li>Have completed basic Whitehat Security training towards a Secure Coding Certification </li>
+          <li>Experienced with Autodesk Inventor design software and can generate engineering drawings</li>
+          <li>Basic Computational Fluid Dynamics (CFD) knowledge</li>
+
+        </ul>
+
+      </div>
+    </div>
+  </div>
+  <!-- Accordion card -->
+
+  <!-- Accordion card -->
+  <div class="card">
+
+    <!-- Card header -->
+    <div class="card-header z-depth-1 teal lighten-3" role="tab" id="heading11">
+      <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx2" href="#collapse11"
+        aria-expanded="false" aria-controls="collapse11">
+        <h4 class="mb-0 black-text text-center font-weight-bold text-uppercase">
+          Non-technical Skills
+        </h4>
+      </a>
+    </div>
+
+    <!-- Card body -->
+    <div id="collapse11" class="collapse" role="tabpanel" aria-labelledby="heading11"
+      data-parent="#accordionEx2">
+      <div class="card-body rgba-teal-strong text-primary text-left">
+        <p>My non-technical skills have developed at a rapid rate since finishing university. I have worked on several projects that have helped develope my team-based skills as well as my soft-skills. Some of these non-technical skills include:</p>
+
+        <ul>
+          <li>Quick thinker</li>
+          <li>Good at problem-solving</li>
+          <li>Good presentation skills and am a natural-sounding speaker</li>
+          <li>Basic product developement skills</li>
+          <li>Knowledge of SCRUM and agile methodology practices</li>
+          <li>Easily adaptable to changing environments</li>
+          <li>Work well as part of a team as well as alone.</li>
+          <li>Good at breaking large problems down into smaller workable pieces</li>
+
+        </ul>
+
+      </div>
+    </div>
+  </div>
+  <!-- Accordion card -->
+
+</div>
+<!--/.Accordion wrapper-->
+
 </section>
 
   <!-- Footer -->
