Fixed auto expanded technical skills tab

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 
     <!-- Card header -->
     <div class="card-header z-depth-1 teal lighten-4" role="tab" id="heading10">
-      <a data-toggle="collapse" data-parent="#accordionEx2" href="#collapse10" aria-expanded="true"
+      <a data-toggle="collapse" data-parent="#accordionEx2" href="#collapse10" aria-expanded="false"
         aria-controls="collapse10">
         <h4 class="mb-0 black-text text-center font-weight-bold text-uppercase">
           Technical Skills
