updated skills accordian section

--- a/index.html
+++ b/index.html
@@ -303,11 +303,11 @@
     </div>
 
     <!-- Card body -->
-    <div id="collapse10" class="collapse show" role="tabpanel" aria-labelledby="heading10"
+    <div id="collapse10" class="collapse" role="tabpanel" aria-labelledby="heading10"
       data-parent="#accordionEx2">
-      <div class="card-body rgba-teal-strong black-text text-primary text-left">
+      <div class="card-body rgba-teal-strong teal text-primary text-left">
         <p>Over several years I have developed my technical skills relating to both engineering as well as technology and computers. Some of my skills include:</p>
-
+        <p>Some of my skills include:</p>
         <ul>
           <li>Python</li>
           <li>Basic Javascript</li>
@@ -343,8 +343,8 @@
     <div id="collapse11" class="collapse" role="tabpanel" aria-labelledby="heading11"
       data-parent="#accordionEx2">
       <div class="card-body rgba-teal-strong text-primary text-left">
-        <p>My non-technical skills have developed at a rapid rate since finishing university. I have worked on several projects that have helped develope my team-based skills as well as my soft-skills. Some of these non-technical skills include:</p>
-
+        <p>My non-technical skills have developed at a rapid rate since finishing university. I have worked on several projects that have helped develope my team-based skills as well as my soft-skills.</p>
+        <p>Some of these non-technical skills include:</p>
         <ul>
           <li>Quick thinker</li>
           <li>Good at problem-solving</li>
