--- a/index.html
+++ b/index.html
@@ -391,6 +391,16 @@
           </a>
         </div>
 
+        <!-- Footer CV Download Link -->
+        <div class="col-lg-4 mb-5 mb-lg-0">
+          <h4 class="text-uppercase mb-4">Full CV Download</h4>
+          <a href="documents/DevinAzzie_CiscoStage1.pdf">
+            <button class="btn btn-secondary btn-outline-light">
+            Download
+            </button>
+          </a>
+          
+
       </div>
     </div>
   </footer>
