--- a/index.html
+++ b/index.html
@@ -173,10 +173,10 @@
 
       <!-- About Section Content -->
       <div class="row">
-        <div class="col-lg-4 ml-auto">
+        <div class="col-lg-4 ml-auto text-left">
           <p class="lead">I am a mechanical engineering graduate who has been part of the NTT secure coding learnership program since 1 June 2019.</p>
         </div>
-        <div class="col-lg-4 mr-auto">
+        <div class="col-lg-4 mr-auto text-left">
           <p class="lead">I have a passion for technology and simple, elegant solutions. I enjoy being challenged and mentally stimulated through my interaction with people who have vast skills in the areas that I am interested in.</p>
         </div>
       </div>
